tests/paczka1/fuzzy1/22750855.err
Error in line 8: rRsiAwTDT S877 78,0
Error in line 16: TTtpk A843 92,1
Error in line 2: dvgoBy A843 5,1
Error in line 10: A843 A843 144,1
Error in line 3: gUJVHT41 A550 15,6
Error in line 17: TTtpk A550 53,1
Error in line 24: gUJVHT41 S877 34,4
Error in line 35: OSQBBYM A550 47,2
Error in line 32: rRsiAwTDT S232 90,7
Error in line 38: A843 S877 4,3
